k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: leblebee
  labels:
    app.kubernetes.io/name: leblebee
